<resources>
    <string name="app_name">ProjetoDroidPizza</string>
    <string name="str_nome_app">Droid Pizza</string>
    <string name="str_titulo_pizza">Pizza</string>
    <string name="str_sabor_presunto">Presunto - R$28,00</string>
    <string name="str_sabor_portuguesa">Portuguesa - R$30,00</string>
    <string name="str_sabor_camarao">Camarão - R$40,00</string>
    <string name="str_titulo_bebida">Bebida</string>
    <string name="str_sabor_coca">Coca-Cola - R$7,00</string>
    <string name="str_sabor_guarana">Guaraná - R$5,00</string>
    <string name="iniciar_atendimento">Iniciar Atendimento</string>
</resources>
