<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.anderson.projetodroidpizza.MainActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_nome_app"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15pt"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/margin_textview_10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_titulo_pizza"
                android:textStyle="bold"
                android:textSize="12pt"
                android:layout_marginBottom="@dimen/margin_textview_5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_sabor_presunto"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginBottom="@dimen/margin_textview_10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_sabor_portuguesa"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginBottom="@dimen/margin_textview_5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_sabor_camarao"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginBottom="@dimen/margin_textview_5dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_titulo_bebida"
                android:textStyle="bold"
                android:textSize="12pt"
                android:layout_marginBottom="@dimen/margin_textview_5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_sabor_coca"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginBottom="@dimen/margin_textview_10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_sabor_guarana"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginBottom="@dimen/margin_textview_5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_atendimento"
                android:id="@+id/btn_iniciar"/>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
